--- a/Untitled-2.html
+++ b/Untitled-2.html
@@ -17,8 +17,8 @@
                 preload="auto" id="vid" response-type="arraybuffer" loop  
                 crossorigin webkit-playsinline autoplay="false" playsinline>
             </video>
-        <img id="btninsta" src="./nun.jpeg" crossorigin="anonymous">
-        <img id="btnphone" src="./nun.jpeg" crossorigin="anonymous">
+        <img id="btninsta" src="./nun.jpg" crossorigin="anonymous">
+        <img id="btnphone" src="./nun.jpg" crossorigin="anonymous">
 
       </a-assets>
       <a-camera position="0 0 0" look-controls="enabled: false" cursor="fuse: false; rayOrigin: mouse;" raycaster="far: 10000; objects: .clickable"></a-camera>
